style: Clean up imports, FQNs, and use getFirst